Use a built-in package for base64 decoding.